# GNN-Retriever-

./: .env.example  .gitignore  .gitmodules  ARCHITECTURE_AND_TZ.md  PROJECT_STAGES.md  README.md  pyproject.toml
deploy/: .env.example  README.md  docker-compose.yml
deploy/infrastructure/: .env.example  docker-compose.yml
deploy/infrastructure/langfuse/: .env.example  README.md  docker-compose.yml
deploy/services/: .env.example  README.md  docker-compose.yml
docs/: GNN_TRAINING_NOTEBOOK_EXPLAINED.md  embedding_benchmark.md
infrastructure/: docker-compose.yml
infrastructure/langfuse/: README.md  docker-compose.yml
ner_benchmark/: README.md  ner_benchmark.ipynb
ner_benchmark/golden_set/: ner_golden.jsonl
notebooks/: GNN_RETRIEVAL_GUIDE.md  GNN_TRAINING_NOTEBOOK_EXPLAINED.md  gnn_latest_run_metrics.json  gnn_phase2_recall40_results.json  gnn_post_training_usage.ipynb  gnn_pruning_audit_results.json  gnn_retrieval_neo4j.ipynb  gnn_retrieval_neo4j_old.ipynb  gnn_retrieval_neo4j_phases.ipynb  gnn_retrieval_query_test.ipynb  gnn_training_plan_results.json  train_changing.md
scripts/: run_embedding_benchmark.py  run_stage2_pipeline.py
services/: README.md  docker-compose.yml
shared/: __init__.py  ollama_embedder.py
stage2_ingestion/: README.md  __init__.py  chunking.py  embedding_benchmark.py  kafka_pipeline.py  models.py  normalize.py  parsers.py  pipeline.py
stage3_1_chunks_indexing/: .env.example  Dockerfile  __init__.py  app.py  config.py  document_builder.py  es_indexer.py  index_service.py  main.py  models.py
stage3_2_chunks_vectorizing/: .env.example  Dockerfile  __init__.py  app.py  config.py  main.py  models.py  ollama_embedder.py  qdrant_store.py  vectorize_service.py
stage3_3_graph_knowledge_base/: .env copy.example  .env.example  Dockerfile  __init__.py  app.py  config.py  entity_embedding_service.py  entity_ids.py  entity_qdrant_store.py  es_chunk_fetcher.py  evaluate_extraction_modes.py  graph_service.py  hybrid_extractor.py  main.py  models.py  neo4j_store.py  ner_entity_extractor.py  ollama_entity_extractor.py  replay_graph_topic.py
stage3_3_graph_knowledge_base/backfill/: __init__.py  entity_embedding_app.py  entity_embedding_backfill_service.py  entity_embedding_main.py
stage7_1_retriever/: .env.example  __init__.py  bm25_retriever.py  cli.py  config.py  gnn_retriever.py  models.py  retriever.py
stage7_1_retriever/neo4j/: chunk_gnn_embedding_vector_index.cypher
stage7_2_reranker/: __init__.py  config.py  reranker.py
stage7_3_retriever_api/: .env.example  Dockerfile  __init__.py  app.py  config.py  main.py  schemas.py
tests/: test_embedding_benchmark_metrics.py  test_entity_embedding_service.py  test_hybrid_extractor.py  test_stage2_ingestion.py
(+4 files in other folders)
