[project]
name = "gnn"
version = "0.1.0"
description = "GraphRAG MVP for legal retrieval with dedup and hybrid retrieval"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "elasticsearch[async]>=8.0.0",
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "pydantic>=2.11.0",
  "aiokafka>=0.12.0",
  "beautifulsoup4>=4.13.0",
  "datasets>=4.1.1",
  "lxml>=5.3.0",
  "pydantic-settings>=2.11.0",
  "pypdf>=5.0.0",
  "python-dotenv>=1.1.0",
  "python-docx>=1.1.0",
  "chonkie>=1.6.1",
  "uuid6>=2025.0.1",
  "httpx>=0.28.0",
  "qdrant-client>=1.15.0",
  "neo4j>=5.0.0",
]

[project.scripts]
stage2-ingestion-kafka = "stage2_ingestion.kafka_pipeline:main"
stage3-chunks-indexing = "stage3_1_chunks_indexing.main:main"
stage3-chunks-vectorizing = "stage3_2_chunks_vectorizing.main:main"
stage3-graph-knowledge-base = "stage3_3_graph_knowledge_base.main:main"

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "httpx>=0.28.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stage2_ingestion", "stage3_1_chunks_indexing", "stage3_2_chunks_vectorizing", "stage3_3_graph_knowledge_base"]
